--- a/marriage/WebRoot/person.html
+++ b/marriage/WebRoot/person.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<link rel="shortcut icon" href="img/favicon.ico" />
+		<title>个人信息</title>
 		<link rel="stylesheet" href="css/reset.css" />
 		<link rel="stylesheet" href="css/register.css" />
         <script type="text/javascript" src="js/jquery.min.js"></script>
