--- a/marriage/WebRoot/success.html
+++ b/marriage/WebRoot/success.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<link rel="shortcut icon" href="img/favicon.ico" />
+<title>注册成功</title>
 </head>
 <body>
 <center>
