--- a/marriage/WebRoot/register.html
+++ b/marriage/WebRoot/register.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title></title>
+		<link rel="shortcut icon" href="img/favicon.ico" />
+		<title>注册</title>
 	<link rel="stylesheet" href="css/reset.css" />
 	<link rel="stylesheet" href="css/register.css" />
         <script type="text/javascript" src="js/jquery.min.js"></script>
